--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,7 +3,7 @@ requires = ["poetry-core>=1.0.0"]
 build-backend = "poetry.core.masonry.api"
 
 [tool.poetry]
-name = "proxy-rotation"
+name = "proxyrotation"
 version = "0.1.0"
 description = "automatic free proxy rotation"
 authors = ["Federico Minutoli <fede97.minutoli@gmail.com>"]
@@ -12,22 +12,22 @@ readme = "README.md"
 keywords = ["proxy-rotation", "web-scraping", "anonymity"]
 
 [tool.poetry.dependencies]
-python = "~3.9"
+python = "~3.10"
 aiohttp = { version = "~3.9", optional = true }
 aiostream = { version = "~0.5", optional = true }
 beautifulsoup4 = "~4.12"
-lxml = "~5.2.1"
+more-itertools = "~10.2"
 requests = "~2.31"
 uvloop = { version = "~0.19", markers = "sys_platform != 'win32'" }
 
 [tool.poetry.extras]
-asyncio = ["aiohttp", "aiostream"]
+async = ["aiohttp", "aiostream"]
 
 [tool.poetry.dev-dependencies]
-pytest = "^7.4"
+pytest = "^8.2"
 pytest-asyncio = "^0.23"
-pytest-cov = "^4.1"
-codecov = "^2.1"
+pytest-cov = "^5.0"
+pytest-mock = "^3.14"
 
 [tool.black]
 include = ".pyi?$"
@@ -45,11 +45,11 @@ exclude = """
 )/
 """
 line-length = 88
-target-version = ["py39"]
+target-version = ["py310"]
 
 [tool.isort]
 include_trailing_comma = true
 lines_after_imports = 2
 multi_line_output = 3
 profile = "black"
-py_version = 39
+py_version = 310
