--- a/.github/workflows/testing.yaml
+++ b/.github/workflows/testing.yaml
@@ -28,7 +28,7 @@ jobs:
           key: poetry-${{ runner.os }}-${{ steps.python-setup.outputs.python-version }}
 
       - uses: snok/install-poetry@v1
-        if: steps.caching-poetry.outputs.cache-hit != "true"
+        if: steps.caching-poetry.outputs.cache-hit != 'true'
         with:
           virtualenvs-create: true
           virtualenvs-in-project: true
@@ -42,7 +42,7 @@ jobs:
           key: venv-${{ runner.os }}-${{ steps.python-setup.outputs.python-version }}-${{ hashFiles('**/poetry.lock') }}
 
       - name: dependencies
-        if: steps.caching-dependencies.outputs.cache-hit != "true"
+        if: steps.caching-dependencies.outputs.cache-hit != 'true'
         run: poetry install --no-interaction --no-root
 
       - name: package
