--- a/.github/workflows/testing.yaml
+++ b/.github/workflows/testing.yaml
@@ -18,7 +18,7 @@ jobs:
         id: python-setup
         uses: actions/setup-python@v5
         with:
-          python-version: "3.10"
+          python-version: "3.9"
 
       - name: caching poetry
         id: caching-poetry
@@ -49,7 +49,15 @@ jobs:
         run: poetry install --no-interaction
 
       - name: testing with coverage
-        run: poetry run pytest --cov=proxy-rotation --cov-report=xml tests/
+        run: poetry run pytest --cov=proxyrotation --cov-report=xml tests/
+
+      - name: coverage report to codecov
+        uses: codecov/codecov-action@v4
+        with:
+          fail_ci_if_error: true
+          file: ./coverage.xml
+          token: ${{ secrets.CODECOV_TOKEN }}
+          verbose: true
 
       - name: min coverage satisfaction - 0.50
         run: |
